<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_marginTop="5dp"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#F2B026"
        android:textSize="20dp"
        android:layout_centerInParent="true"
        android:text="我的"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_alignParentRight="true"
        android:src="@mipmap/ico_user_operate"/>
</RelativeLayout>
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@mipmap/bg_header_toolbar">
                <Button
                    android:id="@+id/btn_login_id"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:shadowRadius="5"
                    android:onClick="LoginAction"
                    android:background="@drawable/shape"
                    android:textColor="#ffffff"
                    android:text="@string/login"
                    />
                <Button
                    android:id="@+id/btn_regist_id"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:shadowRadius="5"
                    android:onClick="LoginAction"
                    android:background="@drawable/shape"
                    android:layout_marginLeft="20dp"
                    android:textColor="#ffffff"
                    android:text="@string/regist"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:onClick="RecipeAction"
                    android:clickable="true"
                    android:gravity="center"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/recipe"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/btn_user_recipe"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/zero"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:onClick="RecipeAction"
                    android:clickable="true"
                    android:gravity="center"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/topic"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/btn_user_topic"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/zero"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:onClick="RecipeAction"
                    android:clickable="true"
                    android:gravity="center"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/photo"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/btn_user_photo"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/zero"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:onClick="RecipeAction"
                    android:clickable="true"
                    android:gravity="center"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/draft"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/btn_user_the_draft"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/zero"/>

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginTop="10dp"
                android:background="#E1E1E1"/>

            <com.yjlw.ddms.aboutme.views.SettingItemClickView
                android:id="@+id/mv_public_menu_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginTop="10dp"
                android:background="#E1E1E1"/>

            <com.yjlw.ddms.aboutme.views.SettingItemClickView
                android:id="@+id/mv_my_dynamic_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="#E1E1E1"/>
            <com.yjlw.ddms.aboutme.views.SettingItemClickView
                android:id="@+id/mv_message_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginTop="10dp"
                android:background="#E1E1E1"/>
            <com.yjlw.ddms.aboutme.views.SettingItemClickView
                android:id="@+id/mv_make_money_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="#E1E1E1"/>
            <com.yjlw.ddms.aboutme.views.SettingItemClickView
                android:id="@+id/mv_gift_change_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginTop="10dp"
                android:background="#E1E1E1"/>
            <com.yjlw.ddms.aboutme.views.SettingItemClickView
                android:id="@+id/mv_download_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="#E1E1E1"/>
            <com.yjlw.ddms.aboutme.views.SettingItemClickView
                android:id="@+id/mv_collect_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="#E1E1E1"/>
            <com.yjlw.ddms.aboutme.views.SettingItemClickView
                android:id="@+id/mv_list_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="#E1E1E1"/>
            <com.yjlw.ddms.aboutme.views.SettingItemClickView
                android:id="@+id/mv_haodouxz_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginTop="10dp"
                android:background="#E1E1E1"/>
            <com.yjlw.ddms.aboutme.views.SettingItemClickView
                android:id="@+id/mv_order_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginTop="10dp"
                android:background="#E1E1E1"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:onClick="OrderUpAction"
                    android:clickable="true"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/ico_order_unpaid"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/order_unpaid"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:onClick="OrderUpAction"
                    android:clickable="true"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/icon_order_undelivery"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/order_undelivery"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:clickable="true"
                    android:onClick="OrderUpAction"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/ico_order_goodsreceived"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/order_goodsreceived"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:onClick="OrderUpAction"
                    android:clickable="true"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/icon_to_review"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/to_review"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:onClick="OrderUpAction"
                    android:clickable="true"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/ico_order_refunds"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/order_refunds"/>
                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="#E1E1E1"/>

            <com.yjlw.ddms.aboutme.views.SettingItemClickView
                android:id="@+id/user_mycoupons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="#E1E1E1"/>
            <com.yjlw.ddms.aboutme.views.SettingItemClickView
                android:id="@+id/user_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginTop="10dp"
                android:background="#E1E1E1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:onClick="SuggestionAction"
                android:clickable="true"
                android:text="@string/suggestion"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginTop="10dp"
                android:background="#E1E1E1"/>
        </LinearLayout>
    </ScrollView>


</LinearLayout>
